@@ -8,11 +8,10 @@ import java.util.List;
 public class PrestamoLlaveService {
 
     private final PrestamoLlaveRepository repository = new PrestamoLlaveRepository();
-
     private final String[] turnos = {"Matutino", "Vespertino", "Laboratorio"};
 
     public String[] obtenerTurnos() {
-        return turnos;
+        return this.turnos;
     }
 
     public List<PrestamoLlave> obtenerTodos() {
@@ -20,44 +19,47 @@ public class PrestamoLlaveService {
     }
 
     public PrestamoLlave buscarPorNombreSolicitante(String nombreSolicitante) {
-        if (nombreSolicitante == null || nombreSolicitante.trim().isEmpty()) {
+        if (nombreSolicitante == null || nombreSolicitante.isBlank()) {
             return null;
         }
         return repository.buscarPorNombreSolicitante(nombreSolicitante.trim());
     }
 
     public String agregar(String nombreSolicitante, String salon, String turno) {
-        // TODO:
-        // 1. Validar que nombreSolicitante no esté vacío.
-        // 2. Validar que salon no esté vacío.
-        // 3. Validar que turno no sea null.
-        // 4. Validar que no exista otro registro con el mismo nombreSolicitante.
-        // 5. Si todo está bien, crear un objeto PrestamoLlave y guardarlo en repository.
-        // 6. Regresar null cuando el registro se guarde correctamente.
-        return "Completa la lógica de agregar en el service";
+        if (nombreSolicitante == null || nombreSolicitante.trim().isEmpty()) {
+            return "El nombre no puede estar vacío.";
+        }
+
+        if (turno == null) return "Seleccione un turno";
+
+        if (repository.buscarPorNombreSolicitante(nombreSolicitante.trim()) != null) {
+            return "Ya existe un préstamo";
+        }
+        PrestamoLlave nuevo = new PrestamoLlave(nombreSolicitante.trim(), salon, turno);
+        repository.guardar(nuevo);
+        return null;
     }
 
     public String actualizar(String nombreOriginal, String nombreNuevo, String salon, String turno) {
-        // TODO:
-        // 1. Validar que nombreOriginal no sea null ni vacío.
-        // 2. Validar que nombreNuevo no esté vacío.
-        // 3. Validar que salon no esté vacío.
-        // 4. Validar que turno no sea null.
-        // 5. Buscar el registro original usando nombreOriginal.
-        // 6. Si no existe, regresar mensaje de error.
-        // 7. Si el nombre cambió, validar que el nuevo nombre no esté repetido.
-        // 8. Si todo está bien, actualizar los atributos del objeto encontrado.
-        // 9. Regresar null si todo salió bien.
-        return "Completa la lógica de actualizar en el service";
+        if (nombreOriginal == null || nombreOriginal.isEmpty()) {
+            return "No se selecciono un registro.";
+        }
+        PrestamoLlave registro = repository.buscarPorNombreSolicitante(nombreOriginal);
+        if (registro == null) return "Registro no encontrado.";
+        registro.setNombreSolicitante(nombreNuevo != null ? nombreNuevo.trim() : nombreOriginal);
+        registro.setSalon(salon != null ? salon.trim() : "");
+        registro.setTurno(turno);
+
+        return null;
     }
 
     public String eliminar(String nombreSolicitante) {
-        // TODO:
-        // 1. Validar que nombreSolicitante no esté vacío.
-        // 2. Buscar si existe el registro.
-        // 3. Si no existe, regresar mensaje de error.
-        // 4. Si existe, eliminarlo desde repository.
-        // 5. Regresar null si se eliminó correctamente.
-        return "Completa la lógica de eliminar en el service";
+        if (nombreSolicitante == null || nombreSolicitante.isBlank()) {
+            return "Ingrese un nombre válido";
+        }
+
+        boolean borrado = repository.eliminarPorNombreSolicitante(nombreSolicitante.trim());
+
+        return borrado ? null : "El registro no existe.";
     }
 }
